Fixing note box content to be vertically centered on mobile

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -273,6 +273,7 @@ a {
   margin: 1px;
   font-size: 1.0rem;
   font-weight: normal;
+  line-height: 2.0rem;
 }
 
 .note-box-focused {
